projects/frontend/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capitalism-frontend
  namespace: capitalism
spec:
  selector:
    app: capitalism-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
